Bug 167006 - Trying to open an embedded object crashes
Summary: Trying to open an embedded object crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-06-13 19:23 UTC by Mike Kaganski
Modified: 2025-08-14 07:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["ZipFile::findCentralDirectory()"]


Attachments
A DOCX with an embedded PPTX (47.44 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-06-13 19:23 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-06-13 19:23:17 UTC
Created attachment 201264 [details]
A DOCX with an embedded PPTX

Open the attachment in Writer, and double-click the embedded object, to open the presentation.

=> crash
Comment 1 Mike Kaganski 2025-06-13 19:37:36 UTC
https://gerrit.libreoffice.org/c/core/+/186479
Comment 2 Commit Notification 2025-06-14 12:12:50 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/587e46e7bc7b2e8520e34b48fa7ef3f188964029

tdf#167006: OWriteStream needs to implement comphelper::ByteReader

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-16 09:07:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/9c1b1dd020576392b469d6bcec2b64b3c4aadff0

tdf#167006: OWriteStream needs to implement comphelper::ByteReader

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2025-06-16 09:58:51 UTC
Regression from a6ad198d097fb4a503c8d5831d484ff46721134b
Comment 5 Commit Notification 2025-06-16 12:04:21 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ce870de38fe15d9982026e5e0b3369b2ff900b86

tdf#167006: OWriteStream needs to implement comphelper::ByteReader

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 mathisa2 2025-08-14 07:37:18 UTC Comment hidden (spam)